Migrate to vanniktech gradle-maven-publish-plugin for Maven Central Portal (#497)
* feat: migrate to vanniktech gradle-maven-publish-plugin for Maven Central Portal

- Remove legacy maven-publish and nexus-staging plugins
- Add vanniktech gradle-maven-publish-plugin v0.33.0 for Central Portal support
- Delete projectSonatype.gradle and create new projectPublishing.gradle
- Update publish.sh to use publishAndReleaseToMavenCentral task
- Add Maven Central properties to gradle.properties

This migration is required due to OSSRH service deprecation on June 30, 2025.
The new plugin supports automatic release to Maven Central without manual UI operations.

* fix: resolve plugin conflicts and update gradle-plugin to vanniktech

- Remove obsolete nexus-staging plugin reference from build.gradle.kts
- Update gradle-plugin to use vanniktech maven-publish plugin v0.25.3
- Fix missing projectSonatype.gradle reference in gradle-plugin
- Add Maven Central Portal configuration for gradle-plugin publishing

* feat: migrate additional modules to vanniktech gradle-maven-publish-plugin

Migrated inappmessaging, inappframe, variables, visualtracking, and inbox modules to use vanniktech gradle-maven-publish-plugin for Maven Central Portal publishing.

Changes include:
- Added com.vanniktech.maven.publish plugin to each module
- Replaced afterEvaluate blocks with mavenPublishing configuration
- Fixed duplicate compileSdk declaration in variables module
- Standardized Maven POM configuration across all modules

* feat: complete vanniktech migration for core, debugger, and notifications modules

Extended vanniktech gradle-maven-publish-plugin migration to the remaining core modules.
All modules now use the same standardized Maven publishing configuration.

* refactor: consolidate mavenPublishing configurations to use shared script

Remove duplicate mavenPublishing blocks from all modules and use centralized projectPublishing.gradle script for consistent Maven Central publishing configurati

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,15 @@
 #
 version: 2.1
 
+# Pipeline parameters for manual workflows
+parameters:
+  workflow_name:
+    type: string
+    default: ""
+  modules:
+    type: string
+    default: ""
+
 orbs:
   android: circleci/android@2.2.0
 
@@ -135,6 +144,61 @@ jobs:
           command: bash ./scripts/publish.sh
       - android/save-gradle-cache
 
+  # Manual operation jobs for publish recovery
+  manual_create_tags:
+    executor:
+      name: android/android-machine
+      tag: 2024.01.1
+    parameters:
+      modules:
+        type: string
+        default: ""
+        description: "Space-separated list of modules to tag (e.g., 'core debugger notifications')"
+    steps:
+      - checkout
+      - run:
+          name: Create and push tags
+          command: |
+            if [ -z "<< parameters.modules >>" ]; then
+              echo "No modules specified. Please provide modules parameter."
+              exit 1
+            fi
+            
+            bash ./scripts/create_tags.sh << parameters.modules >>
+
+  manual_maven_publish:
+    executor:
+      name: android/android-machine
+      tag: 2024.01.1
+    parameters:
+      modules:
+        type: string
+        default: ""
+        description: "Space-separated list of modules to publish (e.g., 'core debugger notifications')"
+    steps:
+      - checkout
+      - android/restore-gradle-cache
+      - run:
+          name: Maven publish
+          command: |
+            if [ -z "<< parameters.modules >>" ]; then
+              echo "No modules specified. Please provide modules parameter."
+              exit 1
+            fi
+            
+            bash ./scripts/maven_publish.sh << parameters.modules >>
+      - android/save-gradle-cache
+
+  manual_sync_repo:
+    executor:
+      name: android/android-machine
+      tag: 2024.01.1
+    steps:
+      - checkout
+      - run:
+          name: Sync repository
+          command: bash ./scripts/sync_repo.sh
+
 workflows:
   build_and_test:
     when: # Execute only public repository
@@ -158,3 +222,33 @@ workflows:
             branches:
               only:
                 - master
+
+  # Manual workflows for publish recovery
+  manual_tag_workflow:
+    when:
+      and:
+        - not:
+            equal: [ "https://github.com/plaidev/karte-android-sdk", << pipeline.project.git_url >> ]
+        - equal: [ manual_tag, << pipeline.parameters.workflow_name >> ]
+    jobs:
+      - manual_create_tags:
+          modules: << pipeline.parameters.modules >>
+
+  manual_publish_workflow:
+    when:
+      and:
+        - not:
+            equal: [ "https://github.com/plaidev/karte-android-sdk", << pipeline.project.git_url >> ]
+        - equal: [ manual_publish, << pipeline.parameters.workflow_name >> ]
+    jobs:
+      - manual_maven_publish:
+          modules: << pipeline.parameters.modules >>
+
+  manual_sync_workflow:
+    when:
+      and:
+        - not:
+            equal: [ "https://github.com/plaidev/karte-android-sdk", << pipeline.project.git_url >> ]
+        - equal: [ manual_sync, << pipeline.parameters.workflow_name >> ]
+    jobs:
+      - manual_sync_repo
