--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,6 @@ kotlin.code.style=official
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
+
+# Maven Central Publishing via vanniktech plugin
+# These values will be loaded from encrypted.properties via CircleCI decryption
