--- a/.github/workflows/uitest-before-release.yml
+++ b/.github/workflows/uitest-before-release.yml
@@ -11,7 +11,7 @@ jobs:
     if: ${{ vars.UITEST_REPO }}
     steps:
       - name: Kick UI Test and wait
-        uses: the-actions-org/workflow-dispatch@v4
+        uses: the-actions-org/workflow-dispatch@3133c5d135c7dbe4be4f9793872b6ef331b53bc7 # v4.0.0
         with:
           workflow: uitest.yml
           repo: plaidev/${{vars.UITEST_REPO}}
