--- a/.github/workflows/release-start.yml
+++ b/.github/workflows/release-start.yml
@@ -12,7 +12,7 @@ jobs:
       pull-requests: write
     steps:
     - name: Checkout develop
-      uses: actions/checkout@v2
+      uses: actions/checkout@ee0669bd1cc54295c223e0bb666b733df41de1c5 # v2.7.0
       with:
         ref: develop
     - name: Configure Git
@@ -42,7 +42,7 @@ jobs:
     - name: Push release branch
       run: git push origin -u release/${{ steps.date.outputs.date }}
     - name: Pull Request Action
-      uses: vsoch/pull-request-action@1.1.0
+      uses: vsoch/pull-request-action@0969c26295afdeffaab628fee287a98b27eca529 # 1.1.0
       env:
         GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
         PULL_REQUEST_BRANCH: master
@@ -58,7 +58,7 @@ jobs:
           ### Update
           ${{ steps.find-release-targets.outputs.targets }}
     - name: Request beta release
-      uses: actions/github-script@v7
+      uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
       with:
         github-token: ${{ secrets.SHARED_GITHUB_ACCESS_TOKEN }}
         script: |
