--- a/.github/workflows/uitest-on-develop.yml
+++ b/.github/workflows/uitest-on-develop.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ vars.UITEST_REPO }}
     steps:
-      - uses: actions/github-script@v7
+      - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           github-token: ${{ secrets.SHARED_GITHUB_ACCESS_TOKEN }}
           script: |
