--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ orbs:
 executors:
   test-executor:
     docker:
-      - image: cimg/android:2024.01.1
+      - image: index.docker.io/cimg/android@sha256:8c5b2edf12d33ba159d154ad6eb58162c36e240a8bf04d66fb1e3dd2e5352119 # cimg/android:2024.01.1
         environment:
           GRADLE_OPTS: -Xmx6G
     resource_class: large
@@ -185,7 +185,6 @@ jobs:
               echo "No modules specified. Please provide modules parameter."
               exit 1
             fi
-            
             bash ./scripts/maven_publish.sh << parameters.modules >>
       - android/save-gradle-cache
 
