Chore/update gradle, AGP and compileSDK (#524)
* gradleのバージョンアップ

* APGのバージョンアップ

* sample-kotlinのビルドエラーを修正

* fix lintRelease

* api定義を更新

* kotlin2系での使用に対å¿

* CompileSDKを36に更新

* compileSdk=36でDeprecatedになった部分をsuppress

* reviewでの指摘事項を修正

* reservedがNo such MethodになるのでasReservedで置き換え

* 不要なSuppressを削除。コメント追加

* publicに変更したクラスにRestrictToでライブラリ外からのアクセス制限をかけた

* kotlin 2系対応は現状必須ではないので除外

* 不要なファイルをコミットしていたので削除

* API定義を元に戻した

* アノテーション整理

* fix lint

* update module versions

* fix CHANGELOG

* update CHANGELOG

* java toolchainを導入 (#542)

* java toolchainを導入

* 各モジュールでもjava toolchainを使うように設定

* テストライブラリをJava 17対応しているものにアップデート

* mockライブラリのアップデートで落ちるようになったテストを修正

* kotlinOptions全体を削除してしまっていたので、必要な部分を復元

* compatibilityとjvm targetをJava 1.8に戻した

* CIでJavaの環境情報を出力

* 不要な設定を削除

---------

Co-authored-by: kota.fujiwara <kota.fujiwara@plaid.partners>

---------

Co-authored-by: kota.fujiwara <kota.fujiwara@plaid.partners>
Co-authored-by: Sojiro Nishimura <sojiro.nishimura@MacBook-Pro-250.local>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,6 +79,12 @@ jobs:
       GRADLE_OPTS: -Xmx6G
     steps:
       - checkout
+      - run:
+          name: Print Java environment
+          command: |
+            echo "JAVA_HOME: $JAVA_HOME"
+            echo "which java: $(which java)"
+            java -version
       - add_google_services
       - android/restore-gradle-cache
       - android/restore-build-cache
