fix: Migrate workflow for publishing docs to GitHub Actions (#562)
* feat: Add .github/workflows/publish-docs.yml

* fix: Enable to publish docs on test branches

* fix: Add timeout

* fix: Add slack notification

* fix: Fix ruby version

--- a/buildscripts/dokka.gradle
+++ b/buildscripts/dokka.gradle
@@ -19,7 +19,12 @@ dokkaHtmlMultiModule {
 
 task publishDocs(type: Exec, group: 'documentation') {
     dependsOn dokkaHtmlMultiModule
-    commandLine "ruby", "scripts/publish_docs.rb"
+    def branch = findProperty('branch')
+    def args = ["ruby", "scripts/publish_docs.rb"]
+    if (branch != null) {
+        args.addAll(["--branch", branch])
+    }
+    commandLine args
     standardOutput = new ByteArrayOutputStream()
     ext.output = {
         return standardOutput.toString()
