--- a/.github/workflows/release-start.yml
+++ b/.github/workflows/release-start.yml
@@ -41,14 +41,17 @@ jobs:
         git commit -m "Update CHANGELOG.md"
     - name: Push release branch
       run: git push origin -u release/${{ steps.date.outputs.date }}
-    - name: Pull Request Action
-      uses: vsoch/pull-request-action@0969c26295afdeffaab628fee287a98b27eca529 # 1.1.0
+    - name: Generate GitHub App token
+      uses: actions/create-github-app-token@7e473efe3cb98aa54f8d4bac15400b15fad77d94 # v2.2.0
+      id: app-token
+      with:
+        app-id: ${{ secrets.SHARED_GITHUB_ACTION_AGENT_APP_ID }}
+        private-key: ${{ secrets.SHARED_GITHUB_ACTION_AGENT_APP_PRIVATE_KEY }}
+    - name: Create Pull Request
+      id: create_pr
       env:
-        GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
-        PULL_REQUEST_BRANCH: master
-        PULL_REQUEST_FROM_BRANCH: release/${{ steps.date.outputs.date }}
-        PULL_REQUEST_TITLE: Deploy to production by ${{ github.actor }}
-        PULL_REQUEST_BODY: |
+        GH_TOKEN: ${{ steps.app-token.outputs.token }}
+        PR_BODY: |
           ### 以下の項目を確認してください
           - [ ] versionファイルのバージョンが正しく更新されていること
           - [ ] 配信されたサンプルアプリでの動作確認
@@ -57,6 +60,12 @@ jobs:
 
           ### Update
           ${{ steps.find-release-targets.outputs.targets }}
+      run: |
+        gh pr create \
+          --title "Deploy to production by ${{ github.actor }}" \
+          --body "$PR_BODY" \
+          --base master \
+          --head release/${{ steps.date.outputs.date }}
     - name: Request beta release
       uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8.0.0
       with:
