--- a/.github/workflows/release-start.yml
+++ b/.github/workflows/release-start.yml
@@ -66,10 +66,18 @@ jobs:
           --body "$PR_BODY" \
           --base master \
           --head release/${{ steps.date.outputs.date }}
+    - name: Generate GitHub App token for triggering workflows
+      uses: actions/create-github-app-token@7e473efe3cb98aa54f8d4bac15400b15fad77d94 # v2.2.0
+      id: app-team-app-token
+      with:
+        app-id: ${{ secrets.APP_TEAM_GITHUB_APP_ID }}
+        private-key: ${{ secrets.APP_TEAM_GITHUB_APP_PRIVATE_KEY }}
+        owner: plaidev
+        repositories: ${{ vars.UITEST_REPO }}
     - name: Request beta release
       uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8.0.0
       with:
-        github-token: ${{ secrets.SHARED_GITHUB_ACCESS_TOKEN }}
+        github-token: ${{ steps.app-team-app-token.outputs.token }}
         script: |
           await github.rest.actions.createWorkflowDispatch({
             owner: 'plaidev',
