--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -28,16 +28,16 @@ java {
 
 dependencies {
     implementation gradleApi()
-    implementation 'org.javassist:javassist:3.24.1-GA'
+    implementation 'org.javassist:javassist:3.30.2-GA'
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
     compileOnly 'com.android.tools.build:gradle:7.0.0'
 
-    implementation 'org.ow2.asm:asm-util:7.0'
-    implementation 'org.ow2.asm:asm-commons:7.0'
+    implementation 'org.ow2.asm:asm-util:9.9'
+    implementation 'org.ow2.asm:asm-commons:9.9'
 
     // WORKAROUND https://issuetracker.google.com/issues/180889192
-    compileOnly "com.android.tools:common:30.0.0-alpha08"
-    compileOnly 'commons-io:commons-io:2.11.0'
+    compileOnly "com.android.tools:common:31.13.2"
+    compileOnly 'commons-io:commons-io:2.21.0'
 }
 
 println "configure plugin: $project.name"
