--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -128,8 +128,21 @@ jobs:
           # gpg --export-secret-keys <key_id> | base64 | pbcopy
           command: echo "$GPG_KEY" | base64 -d > secret-keys.gpg
       - run:
-          name: Publish
-          command: bash ./scripts/publish.sh
+          name: Detect release type and execute
+          command: |
+            # Detect module release by checking version file changes
+            VERSION_CHANGES=$(git diff HEAD~1..HEAD --name-only | grep -E '^(version$|.*/version$)' || true)
+            if [ -n "$VERSION_CHANGES" ]; then
+              echo "Module release detected"
+              echo "Changed version files:"
+              echo "$VERSION_CHANGES" | sed 's/^/  - /'
+              echo "Running full publish flow..."
+              bash ./scripts/publish.sh
+            else
+              echo "Non-module release detected"
+              echo "Running sync only..."
+              bash ./scripts/sync_repo.sh
+            fi
       - android/save-gradle-cache
 
   # Manual operation jobs for publish recovery
