--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,21 +1,27 @@
 name: Publish
 on:
-  # push:
-  #   branches:
-  #     - master
+  push:
+    branches:
+      - master
   workflow_dispatch:
     inputs:
-      dry_run:
-        description: 'Skip Maven Central publish (dry-run mode)'
+      mode:
+        description: 'Publish mode'
         required: false
-        type: boolean
-        default: false
+        type: choice
+        options:
+          - dry-run
+          - release
+        default: dry-run
+env:
+  # Set mode to `release` when pushed to master, otherwise use the input value.
+  MODE: ${{ github.event.inputs.mode || 'release' }}
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: false
 jobs:
   test:
-    if: github.repository != 'plaidev/karte-android-sdk'
+    if: github.repository != 'plaidev/karte-android-sdk' && (github.ref == 'refs/heads/master' || github.event.inputs.mode == 'dry-run')
     # NOTE: Using larger runner since this workflow runs infrequently and should complete quickly.
     runs-on: ubuntu-22.04-8core
     timeout-minutes: 30
@@ -62,7 +68,7 @@ jobs:
           SLACK_COLOR: failure
   publish:
     needs: test
-    if: github.repository != 'plaidev/karte-android-sdk'
+    if: github.repository != 'plaidev/karte-android-sdk' && (github.ref == 'refs/heads/master' || github.event.inputs.mode == 'dry-run')
     # NOTE: Using larger runner since publish runs infrequently and should complete quickly.
     runs-on: ubuntu-22.04-8core
     timeout-minutes: 60
@@ -116,19 +122,23 @@ jobs:
         with:
           ruby-version: '3.4'
       - name: Publish
-        if: github.event.inputs.dry_run != 'true'
+        if: env.MODE == 'release'
         env:
           GITHUB_REMOTE_ADDRESS: 'https://github.com/plaidev/karte-android-sdk.git'
           GITHUB_USER_NAME: 'github actions'
           GITHUB_USER_EMAIL: 'git@users.noreply.github.com'
-        # run: |
-        #   VERSION_CHANGES=$(git diff HEAD~1..HEAD --name-only | grep -E '^(version$|.*/version$)' || true)
-        #   if [ -n "$VERSION_CHANGES" ]; then
-        #     bash ./scripts/publish.sh
-        #   else
-        #     bash ./scripts/sync_repo.sh
-        #   fi
-        run: echo 'bash ./scripts/publish.sh called!'
+        run: |
+          VERSION_CHANGES=$(git diff HEAD~1..HEAD --name-only | grep -E '^(version$|.*/version$)' || true)
+          if [ -n "$VERSION_CHANGES" ]; then
+            bash ./scripts/publish.sh
+          else
+            bash ./scripts/sync_repo.sh
+          fi
+      - name: Trigger publish-docs workflow
+        if: env.MODE == 'release'
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+        run: gh workflow run publish-docs.yml --ref master
       - name: Notify Slack on publish success
         if: success()
         uses: rtCamp/action-slack-notify@e31e87e03dd19038e411e38ae27cbad084a90661 # v2.3.3
