--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -130,6 +130,7 @@ jobs:
           GITHUB_REMOTE_ADDRESS: 'https://github.com/plaidev/karte-android-sdk.git'
           GITHUB_USER_NAME: 'github actions'
           GITHUB_USER_EMAIL: 'git@users.noreply.github.com'
+          README_API_KEY: ${{ secrets.README_API_KEY }}
         run: |
           VERSION_CHANGES=$(git diff HEAD~1..HEAD --name-only | grep -E '^(version$|.*/version$)' || true)
           if [ -n "$VERSION_CHANGES" ]; then
