--- a/.github/workflows/create-tag.yml
+++ b/.github/workflows/create-tag.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
+          persist-credentials: false
           fetch-depth: 0
       - name: Generate GitHub App token
         uses: actions/create-github-app-token@29824e69f54612133e76f7eaac726eef6c875baf # v2.2.1
@@ -83,4 +84,7 @@ jobs:
         if: github.event.inputs.dry_run == 'true'
         env:
           TAG: ${{ steps.tag.outputs.name }}
-        run: git tag "${TAG}"
+        run: |
+          git tag "${TAG}"
+          git push --dry-run origin "${TAG}"
+          git push --dry-run sync_repo "${TAG}"
