--- a/.github/workflows/release-finish.yml
+++ b/.github/workflows/release-finish.yml
@@ -36,18 +36,21 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      with:
+        persist-credentials: false
+        fetch-depth: 0
     # NOTE: Using GitHub App token to bypass branch protection rules.
     - name: Generate GitHub App token
       uses: actions/create-github-app-token@29824e69f54612133e76f7eaac726eef6c875baf # v2.2.1
       id: app-token
       with:
-        app-id: ${{ secrets.SHARED_GITHUB_ACTION_AGENT_APP_ID }}
-        private-key: ${{ secrets.SHARED_GITHUB_ACTION_AGENT_APP_PRIVATE_KEY }}
+        app-id: ${{ secrets.APP_TEAM_GITHUB_APP_ID }}
+        private-key: ${{ secrets.APP_TEAM_GITHUB_APP_PRIVATE_KEY }}
     - name: Configure Git
       run: |
         git config user.email "git@users.noreply.github.com"
-        git config user.name "${{ github.actor }}"
-        git config --global url."https://x-access-token:${{ steps.app-token.outputs.token }}@github.com/".insteadOf "https://github.com/"
+        git config user.name "github actions"
+        git config url."https://x-access-token:${{ steps.app-token.outputs.token }}@github.com/plaidev/karte-android-dev".insteadOf "https://github.com/plaidev/karte-android-dev"
         git fetch
     - name: Merge to develop
       run: |
