--- a/.github/workflows/sync-repo.yml
+++ b/.github/workflows/sync-repo.yml
@@ -35,7 +35,7 @@ jobs:
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
-          git config --global url."https://x-access-token:${GH_TOKEN}@github.com/plaidev/karte-android-sdk.git".insteadOf "https://github.com/plaidev/karte-android-sdk.git"
+          git config --global url."https://x-access-token:${GH_TOKEN}@github.com/plaidev/karte-android-sdk".insteadOf "https://github.com/plaidev/karte-android-sdk"
           git config --global user.name "github actions"
           git config --global user.email "git@users.noreply.github.com"
       - name: Add sync_repo remote
