--- a/buildscripts/jacoco.gradle
+++ b/buildscripts/jacoco.gradle
@@ -1,7 +1,8 @@
 apply plugin: "jacoco"
 
 jacoco {
-    toolVersion = "0.8.7"
+    // 0.8.11+ required for Java 21 support (class file major version 65)
+    toolVersion = "0.8.12"
 }
 
 task jacocoMerge(
