--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -126,6 +126,13 @@ jobs:
           git push --dry-run origin ${TEMP_TAG}
           git push --dry-run sync_repo ${TEMP_TAG}
           git tag -d ${TEMP_TAG}
+      - name: Dry run (Publish to Maven Local)
+        if: env.MODE == 'dry-run'
+        env:
+          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGINMEMORYKEY }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyId: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGINMEMORYKEYID }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGINMEMORYKEYPASSWORD }}
+        run: ./gradlew publishToMavenLocal
       - name: Publish
         if: env.MODE == 'release'
         env:
